syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/move_to_tile_extra.proto";
import "monopoly/money_exchange_extra.proto";
import "monopoly/move_steps_extra.proto";
import "monopoly/collectible_extra.proto";

message ChanceDisplay {
  string title = 1;
  string description = 2;
  optional string image = 3;
}

message Chance {
  ChanceDisplay display = 1;
  oneof extra {
    bool unspecified = 2;
    MoveToTileExtra move_to_tile = 3;
    MoneyExchangeExtra money_exchange = 4;
    MoveStepsExtra move_steps = 5;
    CollectibleExtra collectible = 6;
  }
}